# canary

./: .appveyor.yml  .clang-format  .cmake-format  .cmake-lint  .dockerignore  .editorconfig  .gitattributes  .gitignore  .luarc.json  .prettierrc.json  .reviewdog.yml  .sonarcloud.properties  .travis.yml  AGENTS.md  Auto_Restarter.bat  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Manual del manco.txt  README.md  Restart.bat  apply.patch  arclite_schema.sql  blessbook.lua  build.bat  castle_war.sql  chest.lua  client.exe - Atalho.lnk  client_assertions.txt  confg.lua.dist  config.lua  config.lua.dist  config.lua.save  config_local.lua  docker-compose.yaml  docker-compose.yml  find_fiendish.lua  (+50 more)
canary1/: start.sh  (+1 more)
src/: CMakeLists.txt  CanaryServer.cpp  canary_server.cpp  canary_server.hpp  core.hpp  declarations.hpp  features.hpp  main.cpp  otpch.cpp  otpch.h  otserv.cpp  otservbr-global.rc  pch.cpp  pch.hpp  position.cppm  test.cppm
src/account/: CMakeLists.txt  account.cpp  account.hpp  account_definitions.hpp  account_info.hpp  account_repository.cpp  account_repository.hpp  account_repository_db.cpp  account_repository_db.hpp
src/api/: CMakeLists.txt  README.md  api.cpp  api.hpp
src/config/: CMakeLists.txt  config_definitions.hpp  config_enums.hpp  configmanager.cpp  configmanager.h  configmanager.hpp
src/core/: binary_tree.cpp  binary_tree.hpp  file_handle.cpp  file_handle.hpp  file_stream.cpp  file_stream.hpp  resource_manager.cpp  resource_manager.hpp
src/creatures/: CMakeLists.txt  creature.cpp  creature.h  creature.hpp  creatures_definitions.hpp
src/database/: CMakeLists.txt  database.cpp  database.h  database.hpp  database_definitions.hpp  databasemanager.cpp  databasemanager.h  databasemanager.hpp  databasetasks.cpp  databasetasks.h  databasetasks.hpp
src/decay/: decay.cpp  decay.h
src/enums/: CMakeLists.txt  account_coins.hpp  account_errors.hpp  account_group_type.hpp  account_type.hpp  container_type.hpp  direction.hpp  enum_modules.ixx  forge_conversion.hpp  imbuement.hpp  item_attribute.hpp  item_dummy_ids.hpp  item_ladder_ids.hpp  lua_variant_type.hpp  object_category.hpp  player_blessings.hpp  player_cyclopedia.hpp  player_icons.hpp  player_store_enums.hpp  player_wheel.hpp  weapon_proficiency.hpp
src/features/: features.hpp
src/game/: CMakeLists.txt  game.cpp  game.h  game.hpp  game_definitions.hpp  gamestore.cpp  gamestore.h  gamestore.hpp
src/io/: CMakeLists.txt  account_vip_repository.hpp  account_vip_repository_db.cpp  account_vip_repository_db.hpp  fileloader.cpp  fileloader.h  fileloader.hpp  filestream.cpp  filestream.hpp  io_bosstiary.cpp  io_bosstiary.hpp  io_definitions.hpp  io_store.cpp  io_store.hpp  io_wheel.cpp  io_wheel.hpp  iobestiary.cpp  iobestiary.h  iobestiary.hpp  ioguild.cpp  ioguild.h  ioguild.hpp  iologindata.cpp  iologindata.h  iologindata.hpp  iomap.cpp  iomap.h  iomap.hpp  iomapserialize.cpp  iomapserialize.h  iomapserialize.hpp  iomarket.cpp  iomarket.h  iomarket.hpp  ioprey.cpp  ioprey.h  ioprey.hpp  player_storage_repository.hpp  player_storage_repository_db.cpp  player_storage_repository_db.hpp
src/items/: CMakeLists.txt  augment.hpp  bed.cpp  bed.h  bed.hpp  cylinder.cpp  cylinder.h  cylinder.hpp  item.cpp  item.h  item.hpp  itemloader.h  items.cpp  items.h  items.hpp  items_classification.hpp  items_definitions.hpp  thing.cpp  thing.h  thing.hpp  tile.cpp  tile.h  tile.hpp  trashholder.cpp  trashholder.h  trashholder.hpp
src/kv/: CMakeLists.txt  README.md  kv.cpp  kv.hpp  kv_definitions.hpp  kv_sql.cpp  kv_sql.hpp  value_wrapper.cpp  value_wrapper.hpp  value_wrapper_proto.cpp  value_wrapper_proto.hpp
src/lib/: CMakeLists.txt
src/lua/: CMakeLists.txt  lua_definitions.hpp
src/map/: CMakeLists.txt  kmap_loader.cpp  kmap_loader.hpp  map.cpp  map.h  map.hpp  map_const.h  map_const.hpp  map_definitions.hpp  map_download.cpp  map_download.hpp  mapcache.cpp  mapcache.h  mapcache.hpp  navigation_snapshot.cpp  navigation_snapshot.hpp  spectators.cpp  spectators.hpp  town.cpp  town.h  town.hpp
src/modules/: CMakeLists.txt
src/protobuf/: .clang-format  CMakeLists.txt  appearances.pb.cc  appearances.pb.h  appearances.proto  itemsserialization.pb.cc  itemsserialization.pb.h  itemsserialization.proto  kv.pb.cc  kv.pb.h  kv.proto  playersystems.pb.cc  playersystems.pb.h  playersystems.proto
src/security/: CMakeLists.txt  TOTPAuthenticator.cpp  TOTPAuthenticator.hpp  argon.cpp  argon.hpp  login_session_manager.cpp  login_session_manager.hpp  rsa.cpp  rsa.h  rsa.hpp  rsa_backend.hpp  rsa_backend_mbedtls.cpp  xtea.cpp  xtea.h
src/server/: CMakeLists.txt  server.cpp  server.h  server.hpp  server_definitions.hpp  signals.cpp  signals.h  signals.hpp
src/utils/: BigInt.cpp  BigInt.hpp  CMakeLists.txt  CPUinfo.cpp  CPUinfo.hpp  arraylist.hpp  batch_update.cpp  batch_update.hpp  benchmark.cpp  benchmark.hpp  const.h  const.hpp  counter_pointer.cpp  counter_pointer.hpp  databuffer.hpp  date_time.cpp  date_time.hpp  definitions.h  definitions.hpp  enums.h  hash.h  hash.hpp  lexical_cast.hpp  lockfree.h  lockfree.hpp  magic_enum.hpp  math.hpp  object_pool.hpp  player_thread_base.h  point.hpp  prop_stream.hpp  pugicast.cpp  pugicast.h  pugicast.hpp  qtreenode.cpp  qtreenode.h  range.hpp  safe_convert.hpp  simd.hpp  spectators.h  (+15 more)
tests/: CMakeLists.txt  Dockerfile.database  README.md  account_test.cpp  build_and_run.sh  catch.hpp  docker-compose.yaml  main.cpp  test.env  test1.cpp  test2.cpp  test_pch.hpp
tests/account/: account_test.cpp  in_memory_account_repository.hpp
tests/fixture/: generate_otbm_loader_fixture.py  injection_fixture.hpp  test_injection.hpp  test_items.hpp
tests/fixtures/: injection_fixture.hpp  test_injection.hpp
tests/integration/: CMakeLists.txt  main.cpp  test_database.hpp  test_env.hpp
tests/lib/: CMakeLists.txt
tests/lua/: luaunit.lua  runtests.lua  test_npc_interaction.lua  test_npc_messages.lua  test_npc_messaging.lua  test_npc_topic.lua  test_oasis_lever_door.lua  test_player_processing_configs.lua  test_player_updater.lua  (+1 more)
(+17329 files in other folders)
